--- a/Console2048/Console2048.csproj
+++ b/Console2048/Console2048.csproj
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="2048Ico.ico" />
+    <Content Include="Settings.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
