--- a/Console2048/Console2048.csproj
+++ b/Console2048/Console2048.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
     <Content Include="2048Ico.ico" />
     <Content Include="Settings.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
