Detects Grid Movement
Determines whether the grid has been changed after MoveGrid() is called.
Doesn't add a number if it hasn't changed.

Also returns console to original colors after the game is over.

--- a/Console2048/Console2048.csproj
+++ b/Console2048/Console2048.csproj
@@ -85,7 +85,7 @@
   <ItemGroup>
     <Content Include="2048Ico.ico" />
     <Content Include="Settings.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
